@@ -7,7 +7,6 @@ L["Age Days"] = "%age days"
 L["Age Hours"] = "%age hours"
 L["Age Minutes"] = "%age minutes"
 L["Age Seconds"] = "%age seconds"
-L["Group Member Score"] = "%name (%score)"
 L["Group Member Score False"] = "%name is not available"
 L["Group Score"] = "Simple iLevel: Group average %avg"
 L["Help Advanced"] = "Advanced Tool Tip"
@@ -22,7 +21,7 @@ L["Help General"] = "General Options"
 L["Help Get"] = "Get Score"
 L["Help Get Desc"] = "Gets the AiL of a name if its cached"
 L["Help Group"] = "Group Score"
-L["Help Group Desc"] = "Prints the score of your group to <system/party/raid/battleground/guild/office/say>."
+L["Help Group Desc"] = "Prints the score of your group to <%local>."
 L["Help LDB"] = "LDB Options"
 L["Help LDB Refresh"] = "Refresh Rate"
 L["Help LDB Refresh Desc"] = "How often should LDB be updated in seconds."
